tests/errors/space_start.error
parse error at line 3 column 1 for Tag:
   command
^